2001-12-06  Bruce Hartweg  <brhartweg@bigfoot.com>

	* tkchat.tcl: Move most stuff out of dialog onto menus - cleaned up dialog (now just colors), a few other minor cleanups (also missed from davidw checking in v25 for me was the ability to grab the history logs at startup)

2001-12-05  Reinhard Max  <max@suse.de>

	* tkchat.tcl: Cleaned up things in the "Options Settings" dialog.

2001-11-19  Ryan Casey <scfiead@hotmail.com>

	* tkchat.tcl: Fixed bug of lines being rewritten to the cha
	window on every refresh.

2001-11-14  Reinhard Max  <max@suse.de>

	* tkchat.tcl: Added "Close" button to info windows.
	Added "Save Options" command to the file menu.
	Changed format of config file to be better human readable/editable.

2001-11-13  Ryan Casey <scfiead@hotmail.com>

	* tkchat.tcl: Fixed User Info bug where windows would
	keep popping up on every refresh.

2001-11-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkchat.tcl: minor changes to history handling for speed.
	Redisable the text widget when cleaning the buffer.

2001-11-09  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkchat.tcl: added a little humo(u)r to entry/exit messages.

2001-11-05  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkchat.tcl: corrected gridding in Options dialog

2001-11-02  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkchat.tcl: added formatting of clock to local time, auto
	application of user colors on startup, and removed temporary
	work-around for accidental mini.net DNS hijack.

2001-11-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl (msgDone): fixed typo in the ncode check.

2001-10-30  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkchat.tcl: added smiley detection for Windows/Mac.

2001-10-26  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Added a help dialog. Needs more help in it.
	* tkchat.tcl: Implemented patch 474859 for script startup.
	- Fixed bug 466011: rc file permissions to 0600.
	- Implemented feature request 466221: optionally hiding user